# NDKExercise

./: build.gradle  settings.gradle
CommonModleLib/: build.gradle
CommonModleLib/src/main/: AndroidManifest.xml
CommonModleLib/src/main/java/com/me/support/app/: AppManager.java  BaseApplication.java
CommonModleLib/src/main/java/com/me/support/datacache/: AppDataCache.java  AppDataCacheImpl.java
CommonModleLib/src/main/java/com/me/support/imageLoading/: ImageLoadingManager.java
CommonModleLib/src/main/java/com/me/support/recyclerView/: CommonRecyclerViewAdapter.java  DefaultLoadCreator.java  DefaultRefreshCreator.java  LoadRecyclerView.java  LoadViewCreator.java  MyViewHolder.java  RefreshRecyclerView.java  RefreshViewCreator.java  WrapRecyclerView.java  WrapRecyclerViewAdapter.java
CommonModleLib/src/main/java/com/me/support/utils/: AppUtil.java  BitmapUtil.java  DisplayUtil.java  ExecutorUtil.java  LogUtil.java  NetworkUtil.java  Precondition.java  ToastUtils.java
CommonModleLib/src/main/res/layout/: layout_load_more_view.xml  layout_refresh_header_view.xml
app/: build.gradle
app/src/androidTest/java/com/example/exercisendk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/exercisendk/: IMyAidlInterface.aidl
app/src/main/assets/: litepal.xml
app/src/main/cpp/: Array.hpp  BST.hpp  CMakeLists.txt  LinkedList.hpp  Params.cpp  Params.h  Student.cpp  Tree.cpp  Tree.h  defineMethod.cpp  defineMethod.h  native-lib.cpp  nativeRegister.cpp  priorityQueue.hpp
app/src/main/cpp/bitmap/: BitmapHelper.cpp  BitmapHelper.h
app/src/main/cpp/include/: Person.h  Student.h  XLog.h
app/src/main/cpp/jniNativeRegister/: bitmapMethod.cpp  bitmapMethod.h  nativeRegister.cpp  nativeRegister.h  playerMethod.cpp  playerMethod.h
app/src/main/cpp/player/: ConstDefine.h  FFJniCallback.cpp  FFJniCallback.h  FFmpeg.cpp  FFmpeg.h  IPlayer.cpp  IPlayer.h  IPlayerPorxy.cpp  IPlayerPorxy.h
app/src/main/cpp/player/audio/: FFAudio.cpp  FFAudio.h
app/src/main/cpp/player/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/player/media/: FFMedia.cpp  FFMedia.h
app/src/main/cpp/player/playStatus/: FFPlayStatus.cpp  FFPlayStatus.h
app/src/main/cpp/player/queue/: PacketQueue.cpp  PacketQueue.h
app/src/main/cpp/player/video/: FFVideo.cpp  FFVideo.h
app/src/main/cpp/player/videoPlay/: FFPlayer.cpp  FFPlayer.h
app/src/main/cpp/player/zjhMedia/: ZJHMedia.cpp  ZJHMedia.h
app/src/main/java/com/example/exercisendk/: BaseActivity.java  BaseTest.java  BigImageView.java  BitmapActivity.java  BitmapUtils.java  CombineDex.java  ExecutorUtil.java  ImageTransformationActivity.java  MainActivity.java  MyServic.java  MyService.java  MyTest.java  NativeUtil.java  NotificationUtil.java  ScanActivity.java  SecondActivity.java  ShowBigImageActivity.java  ShowImageActivity.java  TestETActivity.java  UserBean.java  VideoActivity.java  Worker.java
app/src/main/java/com/example/exercisendk/base/: BaseActivity.java
app/src/main/res/drawable/: dialog_background.xml  gray_rectangle_tv_bg.xml  toast_bg.xml
app/src/main/res/layout/: activity_bitmap.xml  activity_image_transformation.xml  activity_main.xml  activity_scan.xml  activity_second.xml  activity_show_big_image.xml  activity_show_image.xml  activity_test_etactivity.xml  activity_video.xml  fragment_test.xml  item_image_transformation.xml  loading_frame.xml  recycerview_item.xml  scankit_customed_layout.xml  toast_frame.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/exercisendk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
